more bottom picture attempts for correct size on mobile devices

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -340,7 +340,7 @@ h2{
         .img-container{
 
             img{
-                width: 100%;
+                height: 50vw;
             }
         }
     }
